--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -17,4 +17,4 @@ jobs:
           # 我的博客 RSS 链接
           feed_list: "https://jijunhao.github.io/atom.xml"
           # 获取最新 10 篇文章
-          max_post_count: 20
+          # max_post_count: 20
