--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,8 +2,7 @@ name: generate-snake
 
 on:
   schedule:
-    # 每 6 小时，执行一次
-    - cron: "0 */6 * * *"
+    - cron: '* 0 * * *'
   workflow_dispatch:
 
 jobs:
