--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -12,7 +12,7 @@ jobs:
     
     steps:
       - name: generate github-snake.svg
-        uses: Platane/snk@master
+        uses: Platane/snk/svg-only@v3
         with:
           # 你的 GitHub 的名称
           github_user_name: jijunhao
