--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,13 +15,15 @@ jobs:
         uses: Platane/snk/svg-only@v3
         with:
           # 你的 GitHub 的名称
-          github_user_name: jijunhao
-          # 生成的 .gif 图存储的位置
-          gif_out_path: dist/github-snake.gif
-          # 生成的 .gif 图存储的位置
-          svg_out_path: dist/github-snake.svg
+          github_user_name: ${{ github.repository_owner }}
+          outputs: |
+            dist/github-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
       - name: push github-snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v2.5.0
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: snake
           build_dir: dist
