--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -16,5 +16,7 @@ jobs:
         with:
           # 我的博客 RSS 链接
           feed_list: "https://jijunhao.online/atom.xml"
+          disable_item_validation: true
+          item_exec: "if (!post.title) post = null;" #to skip post that dont have title
           # 获取最新 10 篇文章
           max_post_count: 20
